cmake fix on OSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 project ("glTF")
 
-string (TOLOWER ${CMAKE_BUILD_RELEASE} glTF_BUILD_TYPE)
+string (TOLOWER ${CMAKE_BUILD_TYPE} glTF_BUILD_TYPE)
 
 set (CASABLANCA /Users/cyrille/Projects/casablanca)
 set (CASABLANCA_INCLUDES ${CASABLANCA}/Release/include)
@@ -21,9 +21,9 @@ set (IOGLTF_PATCH_VERSION 0)
 set (IOGLTF_VERSION ${IOGLTF_MAJOR_VERSION}.${IOGLTF_MINOR_VERSION}.${IOGLTF_PATCH_VERSION})
 
 # Reconfigure final output directory
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_RELEASE})
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_RELEASE})
-set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_RELEASE})
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_TYPE})
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_TYPE})
+set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Binaries/${CMAKE_BUILD_TYPE})
 
 # Platform (not compiler) specific settings
 if ( WIN32 ) # Check if we are on Windows
