--- a/glTF/CMakeLists.txt
+++ b/glTF/CMakeLists.txt
@@ -5,7 +5,7 @@ set (GLTF_PATCH_VERSION 0)
 set (GLTF_VERSION ${GLTF_MAJOR_VERSION}.${GLTF_MINOR_VERSION}.${GLTF_PATCH_VERSION})
 
 # glTF executable
-file (GLOB_RECURSE glTF-src ../glTF/*.cpp)
+file (GLOB_RECURSE glTF-src ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 include_directories (
 	${CASABLANCA_INCLUDES}
 	${FBX_SDK_INCLUDES}
@@ -15,7 +15,8 @@ include_directories (
 add_executable (glTF ${glTF-src})
 target_link_libraries (
 	glTF
-	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}.dylib
-	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}.dylib
+	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}
+	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
 	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
 )
+
