--- a/IO-glTF/CMakeLists.txt
+++ b/IO-glTF/CMakeLists.txt
@@ -5,7 +5,7 @@ set (IOGLTF_PATCH_VERSION 0)
 set (IOGLTF_VERSION ${IOGLTF_MAJOR_VERSION}.${IOGLTF_MINOR_VERSION}.${IOGLTF_PATCH_VERSION})
 
 # IO-glTF dynamic libray
-file (GLOB_RECURSE IO-glTF-src ../IO-glTF/*.cpp)
+file (GLOB_RECURSE IO-glTF-src ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 include_directories (
 	${CASABLANCA_INCLUDES}
 	${FBX_SDK_INCLUDES}
@@ -14,8 +14,8 @@ include_directories (
 add_library (IO-glTF SHARED ${IO-glTF-src})
 target_link_libraries (
 	IO-glTF
-	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}.dylib
-	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}.dylib
+	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}
+	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
 	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
 )
 
@@ -30,11 +30,15 @@ file (
 )
 
 # Dependencies
-file (
-	COPY ${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}.dylib
-	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
-)
-file (
-	COPY ${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}.dylib
-	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
-)
+if ( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )
+	# Mac OS X specific code
+	file (
+		COPY ${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
+		DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
+	)
+	file (
+		COPY ${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}
+		DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
+	)
+endif ()
+
