--- a/glTF/CMakeLists.txt
+++ b/glTF/CMakeLists.txt
@@ -12,10 +12,14 @@ include_directories (
 	/usr/local/include
 	../IO-glTF
 )
+link_directories (
+	${CASABLANCA_LIBS}
+	${FBX_SDK_LIBS}
+)
 add_executable (glTF ${glTF-src})
 target_link_libraries (
 	glTF
-	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}
+	${FBX_SDK_LIBRARY}
 	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
 	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
 )
