--- a/IO-glTF/CMakeLists.txt
+++ b/IO-glTF/CMakeLists.txt
@@ -7,19 +7,18 @@ set (IOGLTF_VERSION ${IOGLTF_MAJOR_VERSION}.${IOGLTF_MINOR_VERSION}.${IOGLTF_PAT
 # IO-glTF dynamic libray
 file (GLOB_RECURSE IO-glTF-src ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 include_directories (
-	${CASABLANCA_INCLUDES}
 	${FBX_SDK_INCLUDES}
 	/usr/local/include
 )
 link_directories (
-	${CASABLANCA_LIBS}
 	${FBX_SDK_LIBS}
+	/usr/local/lib
 )
 add_library (IO-glTF SHARED ${IO-glTF-src})
 target_link_libraries (
 	IO-glTF
 	${FBX_SDK_LIBRARY}
-	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
+	${CASABLANCA_LIBRARY}
 	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
 )
 
@@ -32,17 +31,4 @@ file (
 	COPY ${CMAKE_CURRENT_SOURCE_DIR}/glTF-0-8.json
 	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
 )
-
-# Dependencies
-if ( UNIX )
-	# Mac OS X specific code
-	file (
-		COPY ${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
-		DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
-	)
-	file (
-		COPY ${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}
-		DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
-	)
-endif ()
 
