--- a/glTF/CMakeLists.txt
+++ b/glTF/CMakeLists.txt
@@ -7,20 +7,19 @@ set (GLTF_VERSION ${GLTF_MAJOR_VERSION}.${GLTF_MINOR_VERSION}.${GLTF_PATCH_VERSI
 # glTF executable
 file (GLOB_RECURSE glTF-src ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 include_directories (
-	${CASABLANCA_INCLUDES}
 	${FBX_SDK_INCLUDES}
 	/usr/local/include
 	../IO-glTF
 )
 link_directories (
-	${CASABLANCA_LIBS}
 	${FBX_SDK_LIBS}
+	/usr/local/lib
 )
 add_executable (glTF ${glTF-src})
 target_link_libraries (
 	glTF
 	${FBX_SDK_LIBRARY}
-	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}
+	${CASABLANCA_LIBRARY}
 	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
 )
 
