build update for osx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,13 @@ endif ()
 message (STATUS "Using Casablanca: " ${CASABLANCA})
 
 set (FBX_SDK_INCLUDES ${FBX_SDK}/include)
-set (FBX_SDK_LIBS ${FBX_SDK}/lib/gcc4/x64/${glTF_BUILD_TYPE})
+if ( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )
+	set (FBX_SDK_LIBS ${FBX_SDK}/lib/clang/${glTF_BUILD_TYPE})
+elseif ( UNIX )
+	set (FBX_SDK_LIBS ${FBX_SDK}/lib/gcc4/x64/${glTF_BUILD_TYPE})
+else ()
+	set (FBX_SDK_LIBS ${FBX_SDK}/lib/vs2013/x64/${glTF_BUILD_TYPE})
+endif ()
 set (FBX_SDK_LIBRARY libfbxsdk.${LIBRARY_EXT})
 message (STATUS "Using FBX: " ${FBX_SDK})
 
