--- a/IO-glTF/IO-glTF.vcxproj
+++ b/IO-glTF/IO-glTF.vcxproj
@@ -106,6 +106,7 @@ copy "$(FBX_SDK)\lib\vs2013\x64\release\libfbxsdk.*" "$(TargetDir)" &gt; nul</Co
     <ClInclude Include="gltfWriter.h" />
     <ClInclude Include="gltfwriterVBO.h" />
     <ClInclude Include="IOglTF.h" />
+    <ClInclude Include="JsonPrettify.h" />
     <ClInclude Include="memoryStream.h" />
     <ClInclude Include="ns_exports.h" />
     <ClInclude Include="StdAfx.h" />
@@ -138,6 +139,7 @@ copy "$(FBX_SDK)\lib\vs2013\x64\release\libfbxsdk.*" "$(TargetDir)" &gt; nul</Co
     <ClCompile Include="gltfWriter.cpp" />
     <ClCompile Include="gltfWriterVBO.cpp" />
     <ClCompile Include="IOglTF.cpp" />
+    <ClCompile Include="JsonPrettify.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
