--- a/IO-glTF/IO-glTF.vcxproj.filters
+++ b/IO-glTF/IO-glTF.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="gltfwriterVBO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JsonPrettify.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gltfWriter-Shaders.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JsonPrettify.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
